[package]
name = "rustdev"
version = "0.1.0"
edition = "2021"

[features]
default = ["rust-dev"]
rust-dev = []


[dependencies]
actix-web = "=4.0.1"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "fs"] }
handlebars = "=4.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
